Adds in constructor factory

--- a/index.html
+++ b/index.html
@@ -7,11 +7,31 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>Simple Constructor Pattern</h1>
     <section class="hero">
-      <h2>Super Heroes</h2>
+      <div class="profile">
+        <h2>Ironman</h2>
+        <img src="img/ironman.svg" alt="Ironman" />
+        <p id="ironman">???</p>
+        <button onclick="revealIronMan()">Reveal Identity</button>
+      </div>
+      <div class="profile">
+        <h2>Spiderman</h2>
+        <img src="img/spidey.svg" alt="Spiderman" />
+        <p id="spiderman">???</p>
+        <button onclick="revealSpiderMan()">Reveal Identity</button>
+      </div>
+      <div class="profile">
+        <h2>Wonder Woman</h2>
+        <img src="img/wonderwoman.svg" alt="Wonder Woman" />
+        <p id="wonder-woman">???</p>
+        <button onclick="revealWonderWoman()">Reveal Identity</button>
+      </div>
     </section>
-    <section class="powers">
-      <h2>Hero Powers</h2>
+    <h1>Simple Factory Pattern</h1>
+    <section>
+      <div class="profile">
+      </div>
     </section>
   </body>
   <script src="js/forge.js" charset="utf-8"></script>
