--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Simple Constructor Pattern</h1>
+    <p>Creates a Hero class with both a name and a secret identity. Sets up a method to reveal the hero's secret identity.</p>
     <section class="hero">
       <div class="profile">
         <h2>Ironman</h2>
@@ -28,9 +29,29 @@
         <button onclick="revealWonderWoman()">Reveal Identity</button>
       </div>
     </section>
-    <h1>Simple Factory Pattern</h1>
-    <section>
+    <h1>Factory Pattern</h1>
+    <p>Creates a </p>
+    <section class="hero">
       <div class="profile">
+        <h2>Soccer ball</h2>
+        <p id="roll-soccer">???</p>
+        <button onclick="rollSoccer()">Roll</button>
+        <p id="kick-soccer">???</p>
+        <button onclick="kickSoccer()">Kick</button>
+      </div>
+      <div class="profile">
+        <h2>Football</h2>
+        <p id="roll-football">???</p>
+        <button onclick="rollFootball()">Roll</button>
+        <p id="kick-football">???</p>
+        <button onclick="kickFootball()">Kick</button>
+      </div>
+      <div class="profile">
+        <h2>Basketball</h2>
+        <p id="roll-basketball">???</p>
+        <button onclick="rollBasketball()">Roll</button>
+        <p id="bounce-basketball">???</p>
+        <button onclick="bounceBasketball()">Bounce</button>
       </div>
     </section>
   </body>
