styles singleton section

--- a/index.html
+++ b/index.html
@@ -74,18 +74,15 @@
       <h2>Hero Victories: <span id="display">0</span></h2>
       <section>
         <div class="hero-victory">
-          <h2>Ironman</h2>
-          <img src="img/ironman.svg" alt="Ironman" />
+          <h2><img class="thumb" src="img/ironman.svg" alt="Ironman" />Ironman</h2>
           <button onclick="addVictory()">Ironman Wins</button>
         </div>
         <div class="hero-victory">
-          <h2>Spiderman</h2>
-          <img src="img/spidey.svg" alt="Spiderman" />
+          <h2><img class="thumb" src="img/spidey.svg" alt="Spiderman" />Spiderman</h2>
           <button onclick="addVictory()">Spiderman Wins</button>
         </div>
         <div class="hero-victory">
-          <h2>Wonder Woman</h2>
-          <img src="img/wonderwoman.svg" alt="Wonder Woman" />
+          <h2><img class="thumb" src="img/wonderwoman.svg" alt="Wonder Woman" />Wonder Woman</h2>
           <button onclick="addVictory()">Wonder Woman Wins</button>
         </div>
       </section>
