modularizes js files

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p id="wonder-woman-trip">???</p>
       </div>
     </section>
-    <h1 id="singleton">Singelton Pattern <a class="top" href="#top">&uarr; TOP</a></h1>
+    <h1 id="singleton">Singleton Pattern <a class="top" href="#top">&uarr; TOP</a></h1>
     <p>Creates a single instance of a Victories object. Each time a victory is logged, it's routed to the instance and the value is incremented for display.</p>
     <section class="singleton">
       <h2>Hero Victories: <span id="display">0</span></h2>
@@ -125,5 +125,8 @@
       <p>JS Design Patterns &mdash; &copy; 2020 Comm 429</p>
     </footer>
   </body>
-  <script src="js/forge.js" charset="utf-8"></script>
+  <script src="js/constructor.js" charset="utf-8"></script>
+  <script src="js/factory.js" charset="utf-8"></script>
+  <script src="js/singleton.js" charset="utf-8"></script>
+  <script src="js/decorator.js" charset="utf-8"></script>
 </html>
